# robotCute

./: LICENSE  README.md
robotCute/: CMakeLists.txt  ColorFinder.h  colorFinder.cpp  facedetector.cpp  facedetector.h  facerecognition.cpp  facerecognition.h  facesketch.cpp  facesketch.h  facethread.cpp  facethread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moveobjdetector.cpp  moveobjdetector.h  robotCute.pro  robotCute.pro.user.15  robotCute.pro.user.3.0-pre1  videothread.cpp  videothread.h
